tests/paczka1/small_fuzzy/72411848.err
Error in line 8: aCT0NS80 S961 21,6
Error in line 12: fbi5nMX S830 89,9
Error in line 11: r1F1rgh S50 42,8
Error in line 9: w4W1k5bV S351 34,0
Error in line 10: aCT0NS80 S351 39,2
